[package]
name = "pinyin_zhuyin"
version = "0.1.2"
authors = ["Ariel Dabalsa <arieldabalsa@gmail.com>"]
description = "Convert between pinyin forms and zhuyin"
edition = "2021"
repository = "https://github.com/gnuish/pinyin-zhuyin"
keywords = ["pinyin", "zhuyin", "chinese"]
license = "MIT"

[dependencies]
phf="0.11"

[build-dependencies]
phf_codegen="0.11"
