[package]
name = "pinyin_zhuyin"
version = "0.2.0"
authors = ["Ariel Dabalsa <adabalsa@protonmail.com>"]
description = "Convert between pinyin forms and zhuyin"
edition = "2021"
repository = "https://github.com/gnuish/pinyin-zhuyin"
keywords = ["pinyin", "zhuyin", "chinese"]
license = "MIT"

[dependencies]
phf="0.11"

[build-dependencies]
phf_codegen="0.11"
